@@ -212,6 +212,7 @@ public final class ConnectivityBreakAnalysis {
 
         // we confirm the breaking of connectivity by network connectivity
         ConnectivityAnalysisResult connectivityAnalysisResult = null;
+        int nbConnectedComponentsBefore = connectivity.getNbConnectedComponents();
         connectivity.startTemporaryChanges();
         try {
             // apply all modifications of connectivity, due to the lost/enabled/disabled branches
@@ -226,7 +227,7 @@ public final class ConnectivityBreakAnalysis {
 
             if (!breakingConnectivityElements.isEmpty()) {
                 // only compute for factors that have to be computed for this contingency lost
-                Set<String> elementsToReconnect = computeElementsToReconnect(connectivity, breakingConnectivityElements);
+                Set<String> elementsToReconnect = computeElementsToReconnect(connectivity, breakingConnectivityElements, nbConnectedComponentsBefore);
                 int createdSynchronousComponents = connectivity.getNbConnectedComponents() - 1;
                 Set<LfBus> disabledBuses = connectivity.getVerticesRemovedFromMainComponent();
                 Set<LfHvdc> hvdcsWithoutPower = PropagatedContingency.getHvdcsWithoutPower(lfNetwork, disabledBuses, connectivity);
@@ -248,7 +249,9 @@ public final class ConnectivityBreakAnalysis {
     /**
      * Given the elements breaking the connectivity, extract the minimum number of elements which reconnect all connected components together
      */
-    private static Set<String> computeElementsToReconnect(GraphConnectivity<LfBus, LfBranch> connectivity, Set<ComputedElement> breakingConnectivityElements) {
+    private static Set<String> computeElementsToReconnect(GraphConnectivity<LfBus, LfBranch> connectivity,
+                                                          Set<ComputedElement> breakingConnectivityElements,
+                                                          int nbConnectedComponentsBefore) {
         Set<String> elementsToReconnect = new LinkedHashSet<>();
 
         // We suppose we're reconnecting one by one each element breaking connectivity.
@@ -274,7 +277,10 @@ public final class ConnectivityBreakAnalysis {
             }
         }
 
-        if (reconnectedCc.size() != 1 || reconnectedCc.get(0).size() != connectivity.getNbConnectedComponents()) {
+        // !!! we can have more than one connected component on base case because of actions potentially reconnecting
+        // some elements
+        int createdConnectedComponents = connectivity.getNbConnectedComponents() - nbConnectedComponentsBefore;
+        if (reconnectedCc.size() != 1 || reconnectedCc.getFirst().size() - 1 != createdConnectedComponents) {
             LOGGER.error("Elements to reconnect computed do not reconnect all connected components together");
         }
 
